tests/sad_unclosed_block.msh
// error: line 20: near: 'END': Expected 'END' at the end of block
// Compilation error
DECLR
x: int;
a: int;
b: int;
c: int;
BEGIN
	a := 2;
	b := 4;
	c := -8;
	if (a = 2)
	BEGIN
		print a;

		if (a = 2)
		BEGIN
			print a;
	END
END
